sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:14: error: not found: value inverse
} while(inverse);
        ^